fix; footer-overlapping

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,10 +7,13 @@
 @import "profile.css";
 
 html, body {
+  display: flex;
+  flex-direction: column;
   font-family: 'Roboto', sans-serif, serif;
   font-size: 15px;
   height: 100%;
   background-color: white;
+  min-height: 100vh;
 }
 
 * {
@@ -22,7 +25,7 @@ html, body {
 .main-container {
   margin: 0;
   padding: 0;
-  min-height: calc(100vh - 40px)
+  flex: 100%;
 }
 
 .greeting {
@@ -31,12 +34,11 @@ html, body {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  margin-top: 33vh;
 }
 
 .footer {
   font-weight: lighter;
   text-align: center;
   width: 100%;
-  height: 40px;
+  padding: 16px;
 }
